<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.damolks.ouxy3.ui.main.home.HomeFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/sites"
        android:name="com.damolks.ouxy3.ui.main.sites.SitesFragment"
        android:label="@string/menu_sites" />

    <fragment
        android:id="@+id/marketplace"
        android:name="com.damolks.ouxy3.ui.main.marketplace.MarketplaceFragment"
        android:label="@string/menu_marketplace" />

    <fragment
        android:id="@+id/settings"
        android:name="com.damolks.ouxy3.ui.main.settings.SettingsFragment"
        android:label="@string/menu_settings" />

</navigation>